wallpaper & icon theme update

--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
-colors: nightowl
+colors: cattpuccin
 fonts: snappy
 measurements:
   border-width: 3
   margin: 2
   padding: 4
 wallpaper:
-  path: 17.jpeg
+  path: 7.png
   stretch: false
